# newton

./: .gitignore  CMakeLists.txt  NOTES.txt  do_make.sh  make.sh
inc/: Body.h  Bond.h  Cell.h  Environment.h  Integrator.h  Loader.h  Utils.h
io/: tetrahedron.bdy  tetrahedron.inter
io/t05120_a5.0Sphere/: bodies.bdy  nodes  pairs.inter  properties  softAngles  triangles
io/tcl/: createPairs.tcl  pairs
src/: Body.cc  Bond.cc  Cell.cc  Environment.cc  Integrator.cc  Loader.cc  main.cc
